<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".RegisterFragment">

    <TextView
        android:id="@+id/email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/account_register"
        android:textColor="@color/black"
        android:layout_marginTop="12dp" />

    <EditText
        android:id="@+id/input_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:layout_marginTop="12dp"
        android:hint="@string/email_name"
        android:inputType="textEmailAddress"
        android:padding="4dp"
        android:textSize="14sp"
        android:background="@drawable/border_style"
        tools:text="test@gmail.com"/>


    <EditText
        android:id="@+id/input_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:layout_marginTop="12dp"
        android:hint="@string/password_name"
        android:inputType="textPassword"
        android:padding="4dp"
        android:textSize="14sp"
        android:background="@drawable/border_style"
        tools:text="pavlo123"/>

    <EditText
        android:id="@+id/input_age"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:layout_marginTop="12dp"
        android:inputType="number"
        android:hint="@string/age_name"
        android:padding="4dp"
        android:textSize="14sp"
        android:background="@drawable/border_style"
        tools:text="20"/>

    <RadioGroup
        android:id="@+id/gender"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:checkedButton="@id/radio_male"
        android:orientation="horizontal">
        <RadioButton android:id="@+id/radio_male"
            android:layout_width="wrap_content"
            android:text="@string/male_name"
            android:layout_height="wrap_content" />
        <RadioButton android:id="@+id/radio_female"
            android:layout_width="wrap_content"
            android:text="@string/female_name"
            android:layout_height="wrap_content" />
    </RadioGroup>

    <Button
        android:id="@+id/submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:textAllCaps="false"/>

    <TextView
        android:id="@+id/notification"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/red"
        android:visibility="gone"
        android:text="@string/notification_register_message"
        tools:text="@string/notification_register_message"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_margin="4dp">
        <TextView
            android:id="@+id/log_in_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/log_in_message"
            android:layout_marginEnd="2dp"/>

        <TextView
            android:id="@+id/log_in"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/log_in_button"
            android:layout_gravity="end"
            android:textColor="@color/purple_500"/>

    </LinearLayout>
</LinearLayout>